# game-of-life

./: .clang-format  0.bootstrap.js  Cargo.toml  Makefile  bootstrap.js  index.html
.github/workflows/: build.yml  gh-pages.yml  tests.yml
src/: lib.rs  universe.rs
tests/: web.rs
web/: index.js  package-lock.json  package.json  style.css  webpack.config.js
