[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Artyom Tetyukhin"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fixedbitset = "0.4.0"
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dependencies.wee_alloc]
version = "0.4.5"
optional = true
default-features = false

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]
